# Heckathon-2

./: .gitignore  CLAUDE.md  Hackathon II - Todo Spec-Driven Development.md  README.md
.claude/: settings.local.json
.claude/agents/: docker-engineer.md  docker-testing-agent.md  helm-chart-engineer.md  (+3 more)
phase-2-web/backend/: pyproject.toml  requirements.txt  test_implementation.py
phase-2-web/backend/src/: config.py  main.py
phase-2-web/backend/src/auth/: jwt.py  password.py
phase-2-web/backend/src/database/: connection.py
phase-2-web/backend/src/models/: user.py
phase-2-web/backend/src/routers/: auth.py
phase-2-web/backend/src/schemas/: auth.py
phase-2-web/backend/src/services/: task_service.py  user_service.py
phase-3-ai-chatbot/: CLAUDE.md
phase-4-k8s-deployment/: CLAUDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUCCESS_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_TOOLS_FIX_SUMMARY.md  README.md  master-deploy.sh  run-deployment.bat  run-deployment.ps1  test_mcp_server.py
phase-4-k8s-deployment/backend/: .dockerignore  CLAUDE.md  Dockerfile  MCP_OPTIMIZATION_COMPLETE.md  alembic.ini  pyproject.toml  requirements.txt  test_chatbot.py  test_connection.py  verify_fixes.py
phase-4-k8s-deployment/backend/src/: config.py  main.py
phase-4-k8s-deployment/backend/src/agent_config/: __init__.py  todo_agent.py
phase-4-k8s-deployment/backend/src/auth/: password.py
phase-4-k8s-deployment/backend/src/database/: connection.py
phase-4-k8s-deployment/backend/src/mcp_server/: __main__.py  tools.py
phase-4-k8s-deployment/backend/src/models/: conversation.py
phase-4-k8s-deployment/backend/src/routers/: auth.py  chat.py  tasks.py
phase-4-k8s-deployment/backend/src/schemas/: requests.py
phase-4-k8s-deployment/backend/src/services/: conversation_service.py  task_service.py  task_service_async.py  user_service.py
phase-4-k8s-deployment/backend/src/tasks/: message_cleanup.py
(+347 files in other folders)
