[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary", 
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "cachetools>=6.2.4",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "litellm>=1.80.11",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.2.9",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "openai-chatkit>=0.1.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.9.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.21",
    "reportlab>=4.4.7",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.31",
    "sse-starlette>=3.1.2",
    "uvicorn[standard]>=0.40.0",
    "bcrypt==4.1.2",
    "google-generativeai>=0.8.6",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "httpx>=0.28.1",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
